--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "iojs app"
   },
   "dependencies": {
     "array.prototype.find": "^1.0.0",
@@ -22,7 +22,6 @@
     "node-uuid": "^1.4.1",
     "nodemailer": "*",
     "socket.io": "^1.2.1",
-    "toobusy": "^0.2.4",
     "vksdk": "^4.6.0",
     "winston": "^0.8.3"
   }
