--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^3.9.7",
     "node-fast-cache": "0.2.*",
     "node-uuid": "^1.4.1",
-    "winston": "^0.8.3"
+    "winston": "^0.8.3",
+    "express-handlebars": "*"
   }
 }
