--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,15 @@
     "body-parser": "^1.9.3",
     "compression": "^1.2.0",
     "express": "^5.0.0-alpha.1",
+    "express-handlebars": "*",
     "express-validator": "^2.7.0",
+    "fb": "^0.7.0",
     "jwt-simple": "^0.2.0",
     "less-middleware": "*",
     "mongodb": "^2.0.7",
     "mongoose": "^3.9.7",
     "node-fast-cache": "0.2.*",
     "node-uuid": "^1.4.1",
-    "winston": "^0.8.3",
-    "express-handlebars": "*"
+    "winston": "^0.8.3"
   }
 }
